# rc3_ical_fahrplan.py

./: .gitignore  ReadMe.md  pyproject.toml  rc3_ical_fahrplan.py  rc3_m3u.py  setup.cfg
