[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rc3_ical_fahrplan"
authors = [{name = "KOLANICH"}]
description = "Converts HTML-based rC3 Fahrplan into an ICalendar file."
readme = "ReadMe.md"
keywords = ["CCC", "rC3", "fahrplan", "ical"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Education",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = [
	"beautifulsoup4",
	"icalendar", # @ git+https://github.com/collective/icalendar.git
	"pytz",
	"html2markdown",
	"dateutil", # @ git+https://github.com/dateutil/dateutil.git
]
dynamic = ["version"]

[project.urls]
Homepage = "git@codeberg.org/KOLANICH-tools/rc3_ical_fahrplan"

[tool.setuptools]
zip-safe = true
py-modules = ["rc3_ical_fahrplan"]
include-package-data = false

[tool.setuptools_scm]
